# edgevad

./: .gitignore  AGENTS.md  LICENSE  PLAN.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
edgevad/: __init__.py
edgevad/core/: __init__.py  embedder.py  fpn_extractor.py  logging_utils.py  math_utils.py  memory_bank.py  metrics.py  parsing.py  reproducibility.py  smoothing.py
edgevad/data/: __init__.py  avenue_dataset.py  shanghaitech_dataset.py
edgevad/scripts/: __init__.py  build_memory_bank.py  run_benchmark.py  score_avenue.py  score_shanghaitech.py  summarize_benchmarks.py
scripts/: build_memory_bank.py  infer_stream.py  score_avenue.py
tests/: conftest.py  test_avenue_dataset.py  test_core_fpn_extractor.py  test_core_math_utils.py  test_core_memory_bank.py  test_core_metrics.py  test_core_parsing.py  test_core_reproducibility.py  test_core_smoothing.py  test_score_avenue.py  test_shanghaitech_dataset.py
